--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
-  <audio autoplay loop id="music">
-    <source src="audio/Janji_ft_Johnning_-_Heroes_Tonight.mp3" type="audio/mpeg">
-  </audio>
+  <audio id="music">
+    <source src="audio/Indila_-_Tourner_Dans_Le_Vide_(Jesusful.com).mp3" type="audio/mpeg">
+</audio>
   
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
@@ -27,7 +27,7 @@
         <img src="./images/avatar-2.jpg" class="d-none d-lg-block rounded-circle" alt="">
         <a class="navbar-brand" href="#"><span class="fw-bold h3 d-block text-lg-center mt-lg-3 text-danger"> Ahmed Sayed </span></a>
 
-        <button class="btn btn-danger" id="muteButton">Mute Music <i class="las la-1x  la-volume-mute"></i></button>
+        <button class="btn text-warning" id="musicButton"><i class="las la-2x  la-volume-up"></i></button>
 
         
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,7 +59,7 @@
           <h1 class="display-4 fw-bold" data-aos="fade-up">I am a <span class="text-brand"> Frontend Developer </span> From Egypt , Cairo</h1>
           <p class="lead mt-2 mb-4" data-aos="fade-up" data-aos-delay="300">I am Ahmed Sayed , Frontend Developer and Backend Developer (PHP) , Mobile App Developer (React-Native) and CISCO CCNA certified.</p>
           <a href="#work" class="btn btn-brand me-4">Explore My Work</a>
-          <a href="" class="link-custom">Call:(+20)1021023089</a>
+          <a href="https://wa.me/+201021023089" class="link-custom">Call:(+20)1021023089</a>
           </div>
          </div>
         </div>
@@ -625,7 +625,7 @@
           <!-- Grid container -->
         
           <!-- Copyright -->
- <div class="text-center text-dark p-3" style="background-color: #033f47;" data-aos="fade-down">
+ <div class="text-center text-dark p-3" style="background-color: #033f47;">
             <h5 class="text-warning">All Rights Reserved @2023 at AMSA </h5>
             <a class="text-danger" href="https://www.facebook.com/profile.php?id=100000583636975">Ahmed.Moh.Sayed</a>
           </div>
@@ -648,8 +648,7 @@
 
 
 <script src="js/aos.js"></script>
-<script src="./js/bootstrap.bundle.min.js"></script>
-<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/index.js"></script>
 </body>
 </html>
