--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/line-awesome.css">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="css/index.css">
+
+    <link rel="icon" type="image/x-icon" href="/images/icons8-favicon-94.png">
+
     
     
     <meta charset="UTF-8">
